--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,21 @@
 {
   "name": "TEUN FITNESS",
-  "short_name": "Teun Fitness",
-  "start_url": ".",
+  "short_name": "Teun",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#0b0d10",
   "theme_color": "#0b0d10",
-  "icons": []
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
